Limit build to armhf and arm64

--- a/debian/templates/control.binary.in
+++ b/debian/templates/control.binary.in
@@ -1,5 +1,5 @@
 Package: firmware-@package@
-Architecture: all
+Architecture: armhf arm64
 Replaces: @?replaces@
 Conflicts: @?conflicts@
 Breaks: @?breaks@
